@@ -1,3 +1,10 @@
+Sun Sep 16 12:41:05 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/catman.c (main), src/globbing.c (main), src/lexgrog.l (main),
+	  src/man.c (man_getopt), src/mandb.c (main), src/manpath.c (main),
+	  src/whatis.c (main), src/zsoelim.l (main): Pass NULL as the fifth
+	  argument to getopt_long rather than requiring an unused variable.
+
 Tue Sep 11 13:49:33 BST 2007  Clytie Siddall  <clytie@riverland.net.au>
 
 	* po/vi.po: Update from Translation Project.
